--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,1 +1,389 @@
+*{
+    margin:0px;
+    padding:0px;
+}
+#nav-bar{
+    display: flex;
+    height: 50px;
+    width:100%;
+    background-color: rgba(131, 131, 131, 0.5) ;
+    justify-content: space-around;
+    position: fixed;
+}
+#logo-img{
+    width:3.5vw;
+    border:1px solid black;
+    border-radius:500px;
+    margin-right:2vw;
+    margin-top:2px;
+}
+.nav-list{
+    display: flex;
+    width: 70vw;
+    justify-content: center;
+    align-items: center;
+    margin-left:-10vw;
+    /* border:5px solid green; */
+}
+.nav-list li{
+    list-style: none;
+}
+.nav-list li a{
+    text-decoration: none;
+    color:white;
+    margin-left:2vw;
+    /* border:1px solid black; */
+    font-family: Arial, Helvetica, sans-serif;
+    padding:10px 20px;
+}
+.nav-list li a:hover{
+    background-color: rgba(102, 102, 102, 0.5);
+    transition: 0.19s ease-in-out;
+}
+#search-bar-div{
+    /* border:1px solid black; */
+    display: flex;
+    align-items:center;
+    margin-right:-5vw;
+}
+#search-bar{
+    height: 4vh;
+    width:15vw;
+    padding-left:8px;
+    font-size:16px;
+    border-radius: 4px;
+}
+.icons-edit{
+    border:2px solid white;
+    color:white;
+    border-radius:3px;
+    padding:0.4vh 0.9vw;
+    margin-left:0.5vw;
+}
+.icons-edit:hover{
+    background-color: rgba(102, 102, 102, 0.5);
+    transition: 0.19s ease-in-out;
+}
+#background-img{
+    width:99.9%;
+    height:95vh;
+    background-image: url("/Images/Background.jpg");
+    background-size:cover;
+    background-attachment: fixed;
+    border:0.1px solid transparent;
+}
+#text-intro{
+    /* border:1px solid black; */
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    height: 30%;
+    flex-direction: column;
+    margin-top:380px;
+    margin-left: 40px;
+    margin-right: 200px;
+}
+.font{
+    font-family:Geneva, Tahoma, sans-serif;
+}
+#heading{
+    font-size:45px;
+    color:rgb(87, 244, 255);
+}
+#text{
+    color:white;
+    font-size:20px;
+    padding-top:5px;
+    padding-bottom: 20px;
+}
+.Btn{
+    width:110px;
+    padding:10px 0px;
+    font-size:16px;
+    color:rgb(87, 244, 255);
+    font-weight: bold;
+    border:1px solid rgb(87, 244, 255);
+    border-radius: 4px;
 
+    background-color: transparent;
+}
+.Btn:hover{
+    background-color: rgb(87, 244, 255);
+    color:white;
+}
+#aboutUs{
+    /* border:1px solid black; */
+    width:99.8%;
+    height: 150vh;
+}
+.heading-about{
+    text-align: center;
+    font-size:45px;
+    margin-top:10px;
+    margin-bottom:10px;
+    /* text-decoration: ; */
+}
+
+.first{
+    width: 30%;
+    height: 400px;
+    /* border:1px solid black; */
+    /* display: flex; */
+    /* align-items: center;
+    justify-items: center; */
+}
+.second{
+    /* border:1px solid black; */
+    width: 69.8%;
+    height: 400px;
+}
+#Parts{
+    display: flex;
+}
+.travel-img{
+    width:50%;
+    margin-left: 50px;
+}
+.travel-img2{
+    width:60%;
+    margin-left: 50px;
+    margin-top:30px;
+}
+.text-about{
+    font-size: 18px;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-top:40px;
+    text-justify:auto;
+}
+hr{
+    width: 85%;
+    margin: auto;
+}
+#Parts2{
+    display: flex;
+    flex-direction: row-reverse;
+}
+.sub-heading1{
+    /* border:1px solid black; */
+    width: 59.9%;
+    margin-top:20px;
+    text-align: center;
+    margin-left:33vw;
+    font-size:30px;
+    color:orange;
+}
+.sub-heading2{
+    /* border:1px solid black; */
+    width: 59.9%;
+    margin-top:20px;
+    text-align: center;
+    margin-left:1.9vw;
+    color:orange;
+    font-size:30px;
+
+}
+
+#main-layout-grid{
+    /* border: 1px solid teal; */
+    width: 90%;
+    display: grid;
+    height: 790px;
+    grid-template-columns: auto auto auto;
+    /* column-gap: 15px; */
+    row-gap: 15px;
+    justify-items: center;
+    /* justify-content: center; */
+    /* align-content: center; */
+    margin-bottom:200px;
+    margin:auto;
+    /* margin-left: 20px; */
+    /* margin-right: 20px; */
+}
+.grid-item{
+    height: 250px;
+    width: 28.5vw;
+    display: flex;
+    background-color: wheat;
+    text-align: center;
+    vertical-align:center;
+    font-family: 'Bungee Shade', cursive;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    color:white;
+    font-size:40px;
+    
+}
+#grid-1{
+    grid-column-start:1;
+    grid-column-end:3;
+    width: 58vw;
+    background-image: url("/Images/New\ York.jpg");
+    
+}
+#grid-2{
+    background-image: url("/Images/paris.jpg");
+}
+#grid-3{
+    background-image: url("/Images/Atlanti.jpg");
+}
+#grid-4{
+    background-image: url("/Images/Des.jpg");
+}
+#grid-5{
+    background-image: url("/Images/Des2.jpg");
+}
+#grid-6{
+    background-image: url("/Images/Des3.jpg");
+}
+#grid-7{
+    grid-column-start:2 ;
+    grid-column-end: 4;
+    width:58vw;
+    background-image: url("/Images/Des4.jpg");
+}
+/* font-family: 'Bungee Shade', cursive; */
+
+.grid-item:hover{
+    font-size:49px;
+    transition: 0.1s ease-in-out;
+    filter: brightness(80%);
+}
+#contactUs{
+    width: 99.8%;
+    /* border:1px solid black; */
+    height: 600px;
+}
+#main-contact-div{
+    display: flex;
+    justify-content: space-around;
+}
+
+#contact-form{
+    margin-top:30px;
+    border: 1px solid black;
+    width:460px;
+    height: 500px;     
+    background-image: url("/Images/New\ York.jpg");
+    /* filter:blur(2px); */
+    opacity: 0.7;
+    /* filter:brightness(70%); */
+    background-attachment: fixed;
+    background-size:cover;
+    border-radius: 80px 0px;
+}
+.contact-heading{
+    text-align: center;
+    font-size: 28px;
+    margin-top: 15px;
+    font-weight: bold;
+    color:white;
+}
+.input-label{
+    display: inline-block;
+}
+.input-label{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+    margin-left:20px;
+}
+.input-variable{
+    margin-left:10px;
+    width:52.5%;
+    /* background-color: gray; */
+    /* color:white; */
+    font-size:17px;
+    /* color:white; */
+    padding:2px 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top:25px;
+}
+#class{
+    width:20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+#destination{
+    margin-top:25px;
+    font-size:16px;
+    margin-left:10px;
+}
+
+#Name{
+    width:71%;
+}
+#text-msg{
+    margin-left: 130px;
+    resize: none;
+    margin-top:-18px;
+}
+#msg-label{
+    margin-top:25px;
+    color:white;
+
+}
+#submit-btn{
+    padding:5px 10px;
+    font-size:18px;
+    margin-left:40%;
+    margin-top:10px;
+    text-align:center;
+    background-color: transparent;
+    border:1px solid white;
+    color: white;
+    border-radius:2px;
+}
+.white-inline{
+    display: inline-block;
+    color:white;
+}
+#contact-information{
+    /* border: 1px solid black; */
+    width:40%;
+    height: 500px;
+    margin-top:30px;
+}
+.head{
+    font-size:28px;
+    text-align: center;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+.sub-head{
+    font-size:22px;
+    font-weight: bold;
+    margin-bottom:10px;
+}
+.sub{
+    font-weight: bold;
+}
+.extra-text{
+    font-size:18px;
+}
+#footer{
+    height: 40px;
+    background: black;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.foot{
+    color:white;
+    /* font-weight: bold; */
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    text-align:center
+}
+#menu-burger{
+    position: absolute;
+    top: 15%;
+    right: 1%;
+    display: none;
+}
+.line{
+    width:20px;
+    height: 3px;
+    background-color: white;
+    margin-top:5px;
+    
+}
